# thehub-pr

./: .dockerignore  .gitignore  .mcp.json  .semgrepignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  Makefile.offline  PRII-FEDERATION.bat  PRII-FEDERATION.command  PRII-FEDERATION.sh  PRII-THEHUB.bat  PRII-THEHUB.sh  README.md  activation-matrix.yaml  dependency-graph.yaml  docker-compose.yml  pyproject.toml  requirements-desktop.txt  skill-registry.yaml
config/: .env.example
deploy/: thehub-mcp.service
desktop/: README.md  app_server.py  config.py  launch.py  launcher.html  launcher_api.py  pyinstaller.spec  setup.py
docs/: DATA_POPULATION_AND_THRESHOLD_TUNING.md  FEDERATION_ANALYTICS_v2_RELEASE.md  FEDERATION_AUDIT.md  FEDERATION_COMPLETION_GATE_AUDIT.md  FEDERATION_DESIGN_SYSTEM_V1.md  FEDERATION_FRONTEND_STACK_AUDIT_V1.md  FEDERATION_STATUS.md  FEDERATION_TOPOLOGY.md  FOUR_REPO_PIPELINE_LOGIC.md  OFFLINE_VALIDATION_STATUS.md  ROAD_TO_100.md  SKYWATCHER_SENSOR_FUSION_CONSUMER_PIPELINE.md  SPATIAL_BASELINE_GRID.md  SPATIAL_OVERLAY_JOIN_RULES.md  UI_CLEANUP_OPTIMIZATION_PLAN.md  federation_runtime_evidence.jsonl
federation-templates/: Fix-Gatekeeper.command  PRII-APP.command  PRII-APP.sh  README.md  producers.vars.yaml  requirements-desktop.txt  targets.yaml
registry/: producers.yaml
schemas/: FROZEN.sha256  README.md  federation_alert.schema.json  federation_entity.schema.json  federation_export_manifest.schema.json  federation_funding_award.schema.json  federation_observation.schema.json  federation_relationship.schema.json  federation_source.schema.json  federation_transaction.schema.json  maintenance_finding.schema.json  pr_grid_cell.schema.json  (+4 more)
(+327 files in other folders)
