[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "thehub-pr"
version = "0.1.0"
description = "PRII federation Hub — producer registry, conformance validation, and aggregation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "jsonschema>=4.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
server = ["fastapi>=0.100", "uvicorn[standard]>=0.22"]

[project.scripts]
hub = "hub.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
